Update SpringDocConfig.java