@@ -11,7 +11,7 @@ import io.swagger.v3.oas.models.security.SecurityRequirement;
 import io.swagger.v3.oas.models.security.SecurityScheme;
 import io.swagger.v3.oas.models.security.SecurityScheme.In;
 import io.swagger.v3.oas.models.security.SecurityScheme.Type;
-import java.util.List;
+import java.util.Collections;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 
@@ -24,18 +24,23 @@ public class SpringDocConfig {
   @Bean
   public OpenAPI registerOpenAPI() {
 
+    // Security components used for injecting authorization header from Swagger UI
+    Components components = new Components()
+        .addSecuritySchemes(ApplicationConstants.HEADER_AUTHORIZATION_KEY, new SecurityScheme()
+                .type(Type.APIKEY)
+                .in(In.HEADER)
+                .name(ApplicationConstants.HEADER_AUTHORIZATION_KEY));
+    SecurityRequirement securityRequirement =
+        new SecurityRequirement().addList(ApplicationConstants.HEADER_AUTHORIZATION_KEY);
+    // Basic information to display on page
+    Info info = new Info()
+        .title(SpringDocConstants.APP_NAME)
+        .version(SpringDocConstants.VERSION);
+
+    // Registers the OpenAPI object to generate Swagger page
     return new OpenAPI()
-        .components(
-            new Components()
-                .addSecuritySchemes(ApplicationConstants.HEADER_AUTHORIZATION_KEY,
-                    new SecurityScheme()
-                        .type(Type.APIKEY)
-                        .in(In.HEADER)
-                        .name(ApplicationConstants.HEADER_AUTHORIZATION_KEY)
-                )
-        )
-        .security(List.of(
-            new SecurityRequirement().addList(ApplicationConstants.HEADER_AUTHORIZATION_KEY)))
-        .info(new Info().title(SpringDocConstants.APP_NAME).version(SpringDocConstants.VERSION));
+        .components(components)
+        .security(Collections.singletonList(securityRequirement))
+        .info(info);
   }
 }
